--- a/src/.htaccess
+++ b/src/.htaccess
@@ -5,5 +5,8 @@ RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php
+RewriteCond %{REQUEST_URI} !.(css|gif|ico|jpg|js|png|swf|txt)$
+
+RewriteRule ^(.*)$ index.php [L,QSA]
+
 RedirectMatch 403 favicon.ico
