--- a/src/.htaccess
+++ b/src/.htaccess
@@ -5,7 +5,8 @@ RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_URI} !.(css|gif|ico|jpg|js|png|swf|txt)$
+RewriteCond %{REQUEST_FILENAME} !-l
+RewriteCond %{REQUEST_URI} !/assts/css/styles.css$
 
 RewriteRule ^(.*)$ index.php [L,QSA]
 
