separated view from logic

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -6,7 +6,7 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
-RewriteCond %{REQUEST_URI} !/assts/css/styles.css$
+RewriteCond %{REQUEST_URI} !/src/assts/css/styles.css$
 
 RewriteRule ^(.*)$ index.php [L,QSA]
 
