--- a/task-18/composer.json
+++ b/task-18/composer.json
@@ -15,6 +15,8 @@
     "minimum-stability": "stable",
     "require": {
         "twig/twig": "^3.4",
-        "joserick/png-metadata": "^0.2.7"
+        "joserick/png-metadata": "^0.2.7",
+        "psr/log": "^3.0",
+        "monolog/monolog": "^3.2"
     }
 }
